--- a/projects.html
+++ b/projects.html
@@ -184,75 +184,183 @@
 												<div class="accordion-body">
 												
 													<div class="resume-wrap d-flex ftco-animate">
-														<div class="icon d-flex align-items-center justify-content-center">
-															<span class="icon-ideas"></span>
-														</div>
 														<div class="text pl-3">							
-															<h2>Soil Investigation of Garut University Building Plan,</h2>
-															<span class="date">Garut, West Java, under PT. Mutiara Global</span>
+															<h2>Soil Investigation at Head Area, Nuanu City Estate at Jl. Nyanyi Beach, Beraban Village.</h2>
+															<span class="date">Kediri District -Tabanan Bali, under PT. Wooden Fish Village</span>
 														</div>
 													</div>
 													<div class="resume-wrap d-flex ftco-animate">
-														<div class="icon d-flex align-items-center justify-content-center">
-															<span class="icon-ideas"></span>
-														</div>
 														<div class="text pl-3">							
-															<h2>Soil Investigation of Kolelet Bridge, in Rangkasbitung</h2>
-															<span class="date">Lebak - Banten under PT. Amarta Karya (PERSERO)</span>
+															<h2>Pekerjaan Survey Geoteknik Area Ore Processing Plan (OPP)</h2>
+															<span class="date">Sumbawa - Nusa Tenggara Barat, PT. Sumbawa Juta Raya</span>
 														</div>
 													</div>
 													<div class="resume-wrap d-flex ftco-animate">
-														<div class="icon d-flex align-items-center justify-content-center">
-															<span class="icon-ideas"></span>
-														</div>
 														<div class="text pl-3">							
-															<h2>Soil Investigation of Bandung Citylight Residence</h2>
-															<span class="date">Padasuka, Bandung under PT Cipta Indah Pertiwi</span>
+															<h2>Jasa Penyelidikan Tanah Area Rumah Massal R.12 Summarecon Bandung</h2>
+															<span class="date">Bandung - Jawa Barat, under PT. Mahkota Permata perdana</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">												
+														<div class="text pl-3">							
+															<h2>Jasa Penyelidikan Tanah Area Rumah Contoh R.12 Summarecon Bandung</h2>
+															<span class="date">Bandung - Jawa Barat, under PT. Mahkota Permata perdana</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">						
+														<div class="text pl-3">							
+															<h2>Jasa Penyelidikan Tanah Area Kav. Borromeusa</h2>
+															<span class="date">Bandung - Jawa Barat, under PT. Mahkota Permata perdana</span>
 														</div>
 													</div>
 													<div class="resume-wrap d-flex ftco-animate">
-														<div class="icon d-flex align-items-center justify-content-center">
-															<span class="icon-ideas"></span>
-														</div>
 														<div class="text pl-3">							
-															<h2>Soil Investigation of Feasibility Study “Penyediaan Jasa Simpang Susun Tak Sebidang” </h2>
-															<span class="date">Mohammad Toha, Bandung under PT. Mekaro Daya Mandiri for Public Work Service of Jawa Barat</span>
+															<h2>Jasa Penyelidikan Tanah Area Kav. Magnolia</h2>
+															<span class="date">Bandung - Jawa Barat, under PT. Mahkota Permata perdana</span>
 														</div>
 													</div>
 													<div class="resume-wrap d-flex ftco-animate">
-														<div class="icon d-flex align-items-center justify-content-center">
-															<span class="icon-ideas"></span>
-														</div>
 														<div class="text pl-3">							
-															<h2>Soil Investigation of Office Build Plan, in Kelapa Dua</h2>
-															<span class="date">DKI Jakarta under PT. Aspac Pasific Konstruksi & Rekayasa</span>
+															<h2>Jasa Penyelidikan Tanah Museum Listrik & Energi Terbarukan</h2>
+															<span class="date">Taman Mini Indonesia Indah – Jakarta Timur, under PT PT. PLN Persero</span>
 														</div>
 													</div>
 													<div class="resume-wrap d-flex ftco-animate">
-														<div class="icon d-flex align-items-center justify-content-center">
-															<span class="icon-ideas"></span>
-														</div>
 														<div class="text pl-3">							
-															<h2>Soil Investigation of Feasibility Study “Tempat Pembuangan Sampah Akhir (TPA)</h2>
-															<span class="date">under PT. Rekateknik Kreasi Indonesia</span>
+															<h2>Jasa Penyelidikan Tanah Kendal Warehaouse</h2>
+															<span class="date">Kendal – Jawa Tengah, under PT. Mega Anugrah Cemerlang </span>
 														</div>
 													</div>
 													<div class="resume-wrap d-flex ftco-animate">
-														<div class="icon d-flex align-items-center justify-content-center">
-															<span class="icon-ideas"></span>
-														</div>
 														<div class="text pl-3">							
-															<h2>oil Investigation of DED Terminal 3 Pier 1, Soekarno-Hatta Airport</h2>
-															<span class="date">Tangerang - Banteng, under PT Indulexco for PT Angkasa Pura II (Persero)</span>
+															<h2>Jasa Penyelidikan Tanah Cluster Flora Summarecon</h2>
+															<span class="date">Bandung - Jawa Barat, under PT. Mahkota Permata perdana</span>
 														</div>
 													</div>
 													<div class="resume-wrap d-flex ftco-animate">
-														<div class="icon d-flex align-items-center justify-content-center">
-															<span class="icon-ideas"></span>
-														</div>
 														<div class="text pl-3">							
-															<h2>Soil Investigation of Warehouse and Office Building Plan</h2>
-															<span class="date">Indramayu - West Java under PT. Andalan Prima Indonesia</span>
+															<h2>Jasa Penyelidikan Tanah Kavling Setiabudhi Supermarket Summarecon</h2>
+															<span class="date">Bandung - Jawa Barat, under PT. Mahkota Permata perdana</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Penyelidikan Tanah Area R9 Summarecon</h2>
+															<span class="date">Bandung - Jawa Barat, under PT. Mahkota Permata perdana</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Penyelidikan Tanah Kavling Magna Commercial 3</h2>
+															<span class="date">Bandung - Jawa Barat, under PT. Mahkota Permata perdana</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Penyelidikan Tanah Pembanguan Fuel Hydrant dan DPPU Bandara Kulon Progo</h2>
+															<span class="date">Kulon Progo – DIY, under PT. JGC Indonesia</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Jasa Penyelidikan Tanah Kantor Sewa Teknopolis 2 – Summarecon</h2>
+															<span class="date">Bandung - Jawa Barat, under PT. Mahkota Permata perdana</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>JPenyelidikan Tanah Apron Zona 4 Bandara Sultan Hasanuddin Makassar</h2>
+															<span class="date">Makassar - Sulawesi Selatan, under PT. Waskita Karya</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Penyelidikan Tanah K2 Warehouse Project</h2>
+															<span class="date">Karawang – Jawa Barat, under PT. Pacific Vantage Indonesia</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Jasa Penyelidikan Tanah Cluster Crystal - Summarecon </h2>
+															<span class="date">Bandung - Jawa Barat, under PT. Mahkota Permata perdana</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Jasa Penyelidikan Tanah Cluster Elina - Summarecon</h2>
+															<span class="date">Bandung - Jawa Barat, under PT. Mahkota Permata perdana</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Soil Investigation Sambiredjo Village</h2>
+															<span class="date">Yogyakarta, under PT. Aecom Indonesia</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Penyelidikan Tanah pada Pengembangan Apron Bandara Sultan Hasanudin, Makassar</h2>
+															<span class="date">Makassar – Sulawesi Selatan, under PT. Waskita Karya Tbk</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Penyelidikan Tanah Cluster Dayana - Summarecon</h2>
+															<span class="date">Bandung - Jawa Barat, under PT. Mahkota Permata perdana</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Soil Investigation IKEA Store, Bandung</h2>
+															<span class="date">Bandung - Jawa Barat, under PT. Aecom Indonesia</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Jasa Soil Investigation untuk Pekerjaan Perencanaan Pengembangan Fasilitas Sisi Udara Bandara Kualanamu (KNO)</h2>
+															<span class="date">Medan – North Sumatera, under PT. Indulexco</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Pekerjaan Pembangunan Infrastruktur Bandara Baru di Kulon Progo</h2>
+															<span class="date">Yogyakarta, under PT. PP Persero</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Pekerjaan Soil Investigation Interchange Palindra pad Proyek Tol Kayu Agung </h2>
+															<span class="date">Palembang - Sumatera Selatan, under PT. Multi Mulya Putra</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Penyelidikan Tanah untuk DED PerluasanTerminanal 1 Bandara Juanda</h2>
+															<span class="date">Surabaya - East Java, under PT. Indulexco</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Penyelidikan Tanah untuk DED Perluasan Terminal 3 Pier 1 Bandara Soekarno Hatta</h2>
+															<span class="date">Banten, under PT. Indulexco</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Penyelidikan Tanah Jembatan Gantung Kolelet CS</h2>
+															<span class="date">Rangkasbitung - Banten, under PT. Amata Karya </span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Jasa Sondir Bangunan Universitas Garut</h2>
+															<span class="date">Garut - Jawa Barat, under Mutiara Global Industri</span>
+														</div>
+													</div>
+													<div class="resume-wrap d-flex ftco-animate">
+														<div class="text pl-3">							
+															<h2>Jasa Sondir Proyek Gudang </h2>
+															<span class="date">Indramayu - West Java, under PT. Andalan Prima Indonesia</span>
 														</div>
 													</div>
 												</div>
