--- a/index.html
+++ b/index.html
@@ -339,34 +339,10 @@
 		<div class="section client">
 			<div class="container">
 			  <div class="client-logo-slider align-self-center align-items-center align-midle">
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/andalan prima Indonesia.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/nur straits.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/indulexco.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/wika.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/JGC.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Elnusa.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Amarta.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Atelier.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/HIK.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Bintang.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Lapi.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Aecom.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/magna.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/MMP.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/mahacoal.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/MPK.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Mutiara.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/pertiwi.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/pgn.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/PP.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/quantus.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Rekateknik.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Royal.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Sumbawa.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Sumbawa – 1.jpg" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/quantus – 1.jpg" alt="client-logo"></a>
-				</div>
+				<script src="js/connector/clientConnector.js"></script>	
+				
 			</div>
+		</div>
 		</div>
 		  <!-- /clients -->
 		
