--- a/projects.html
+++ b/projects.html
@@ -663,7 +663,7 @@
 					<h2 class="heading">Galery</h2>
 				</div>
 				<div class="col-lg-4">
-					<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque.</p>
+					<p>We take great pride in our work and our commitment to excellence. That's why we've created a gallery to showcase some of our best projects and achievements. In this gallery, you'll see examples of our services, and the results we've worked to our clients. Whether you're interested in our services, you'll find it all here.</p>
 				</div>
 			</div>
 			<div class="row" data-aos="fade-up" data-aos-delay="100">
