--- a/index.html
+++ b/index.html
@@ -181,13 +181,20 @@
 					<h2 class="heading">GOOD DECISIONS COME FROM EXPERIENCE.</h2>
 					<p> From this background, NDS Engineering is expected to be the solution of dynamic construction problems in Indonesia. The diversity of the Indonesian nation formed by the large number of tribes who live in the territory of Indonesia and spread across various islands and regions across Indonesia. Therefore each tribe has its own characteristics on social and cultural aspects. When associated in the field of construction, special handling is required in each region to accommodate the cultural aspects of the area.</p>
 
-					<p><a href="about.html" class="more-2">Read more <span class="icon-arrow_forward"></span></a></p>
+					<button><a href="about.html">Read more <span class="icon-arrow_forward"></span></a></button>
 				</div>
 				<div class="col-lg-8 order-2 ms-auto" data-aos="fade-left" data-aos-delay="500">
 					<img src="images/about-us.jpg" alt="Image" class="img-fluid img-r" id="imageAbout">
 				</div>
 			</div>
 		</div>
+		<div class="right">
+			<img src="images/Right.png" alt="">
+		</div>
+		<div class="left">
+			<img src="images/Left.png" alt="">
+		</div>
+
 	</div>
 
 
@@ -781,60 +788,6 @@
 		</div>
 	  </div>
 	  
-	
-	<!-- <div class="section sec-contact">
-		<div class="container">			
-			<div class="row mb-5 justify-content-center text-center">
-				<div class="col-lg-5">
-					<h2 class="heading">Get in touch</h2>
-					<p class="text-black-50">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-				</div>
-			</div>
-			
-			<form action="forms/contact.php" method="post" role="form" class="php-email-form row" id="contact">
-
-				<div class="col-md-6 col-lg-6">
-					<div class="mb-3">
-						<label for="name" class="ps-3 mb-2">Name</label>
-						<input type="text" class="form-control" id="name">
-					</div>
-				</div>
-
-				<div class="col-md-6 col-lg-6">
-					<div class="mb-3">
-						<label for="email" class="ps-3 mb-2">Email</label>
-						<input type="text" class="form-control" id="email">
-					</div>
-				</div>
-
-				<div class="col-md-6 col-lg-6">
-					<div class="mb-3">
-						<label for="phone" class="ps-3 mb-2">Phone</label>
-						<input type="text" class="form-control" id="phone">
-					</div>
-				</div>
-
-				<div class="col-md-6 col-lg-6">
-					<div class="mb-3">
-						<label for="subject" class="ps-3 mb-2">Subject</label>
-						<input type="text" class="form-control" id="subject">
-					</div>
-				</div>
-
-				<div class="col-md-12 col-lg-12">
-					<div class="mb-3">
-						<label for="message" class="ps-3 mb-2">Message</label>
-						<textarea class="form-control" name="" id="message" cols="30" rows="7"></textarea>
-					</div>
-				</div>
-
-				<div class="col-md-12">
-					<input type="submit" value="Send message" class="btn btn-primary">
-				</div>
-
-			</form>
-		</div>
-	</div> -->
 
 	<section class="contact-us" id="contact-section">
 		<div class="container">
@@ -843,7 +796,7 @@
 			  <div id="map" data-aos="fade-up" data-aos-duration="1000">
 			  
 				<!-- You just need to go to Google Maps for your own map point, and copy the embed code from Share -> Embed a map section -->
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.091641282141!2d107.63513331455867!3d-6.879623995028647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e70ec26f4a45%3A0x65d4d8377dbaf6!2sNusa%20Dinamika%20Solusindo%20Engineering!5e0!3m2!1sid!2sid!4v1675691198056!5m2!1sid!2sid" width="100%" height="420px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.091641282141!2d107.63513331455867!3d-6.879623995028647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e70ec26f4a45%3A0x65d4d8377dbaf6!2sNusa%20Dinamika%20Solusindo%20Engineering!5e0!3m2!1sid!2sid!4v1675691198056!5m2!1sid!2sid" width="100%" height="420px" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				
 			  </div>
 			</div>
@@ -889,6 +842,14 @@
 	  
 		  </div>
 		</div>
+
+		<div class="right">
+			<img src="images/Right.png" alt="">
+		</div>
+		<div class="left">
+			<img src="images/Left.png" alt="">
+		</div>
+
 		</section>
 	  
 
