--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <div class="col-md-6 col-lg-3 col-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="feature-item border h-100 p-5">
                         <div class="box-icon btn-square rounded-circle mb-4" style="width: 64px; height: 64px;">
-                            <i class="bi bi-list-check"></i>
+                            <i class="bi bi-briefcase-fill"></i>
                         </div>
                         <h5 class="mb-3">65</h5>
                         <p class="mb-0">Project that we already finished</p>
@@ -232,7 +232,7 @@
 					<button><a href="about.html">Read more <span class="icon-arrow_forward"></span></a></button>
 				</div>
 				<div class="col-lg-8 order-2 ms-auto" data-aos="fade-left" data-aos-delay="500">
-					<img src="images/about-us.jpg" alt="Image" class="img-fluid img-r" id="imageAbout">
+					<img src="images/about-us.png" alt="Image" class="img-fluid img-r" id="imageAbout">
 				</div>
 			</div>
 		</div>
@@ -924,7 +924,7 @@
 			  <div id="map" data-aos="fade-up" data-aos-duration="1000">
 			  
 				<!-- You just need to go to Google Maps for your own map point, and copy the embed code from Share -> Embed a map section -->
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.091641282141!2d107.63513331455867!3d-6.879623995028647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e70ec26f4a45%3A0x65d4d8377dbaf6!2sNusa%20Dinamika%20Solusindo%20Engineering!5e0!3m2!1sid!2sid!4v1675691198056!5m2!1sid!2sid" width="100%" height="420px" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.091641282141!2d107.63513331455867!3d-6.879623995028647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e70ec26f4a45%3A0x65d4d8377dbaf6!2sNusa%20Dinamika%20Solusindo%20Engineering!5e0!3m2!1sid!2sid!4v1675691198056!5m2!1sid!2sid" width="100%" height="520px" style="border:0; border-radius: 10px; filter: invert(90%);" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				
 			  </div>
 			</div>
