--- a/index.html
+++ b/index.html
@@ -1078,6 +1078,32 @@
 		</div>
 	</div>
 
+	<div id="myModal" class="modal-right">
+		<div class="modal-content d-flex justify-content-center text-center">
+		  <p>Please Use the asset in a right way, ask for permittion use the asset</p>
+		  <button id="closeModal">Close</button>
+		</div>
+
+		<script>
+			// get the modal and close button
+			const modal = document.querySelector('#myModal');
+			const closeButton = document.querySelector('#closeModal');
+
+			// add a click event listener to the close button
+			closeButton.addEventListener('click', () => {
+			modal.style.display = 'none';
+			});
+
+			// add a contextmenu event listener to the document
+			document.addEventListener('contextmenu', event => {
+			// prevent the default behavior of the event
+			event.preventDefault();
+			// display the modal
+			modal.style.display = 'block';
+			});
+
+		</script>
+	  </div>
 
 
 	<!-- jQuery -->
@@ -1107,36 +1133,7 @@
 
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="http://iprodev.github.io/Scrollax.js/lib/scrollax.min.js"></script>
-	<script>
-		
-		function scrollHandler(event) {
-  // prevent the default scroll behavior
-  event.preventDefault();
-  
-  // calculate the current scroll position and container height
-  const container = document.querySelector('.section');
-  const currentPosition = container.scrollTop;
-  const containerHeight = container.offsetHeight;
-  
-  // calculate the snapping point
-  const snapHeight = 200; // adjust this value to change the snapping interval
-  const snapIndex = Math.round(currentPosition / snapHeight);
-  const snapPosition = snapIndex * snapHeight;
-  
-  // scroll to the snapping position using the scrollTo() function
-  container.scrollTo({
-    top: snapPosition,
-    behavior: 'smooth'
-  });
-}
-
-document.addEventListener('mousewheel', scrollHandler);
-document.addEventListener('touchmove', scrollHandler);
-
-
-	</script>
-
-
+	
 
 	
 </body>
