--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
 	<div class="site-footer">
 		<div class="container">
 
-			<div class="row justify-content-between mt-5">
+			<div class="row justify-content-between mt-2">
 				<div class="col-lg-4"  data-aos="fade-right" data-aos-delay="500">
 					<div class="widget">
 						<h3 class="line-top">About</h3>
@@ -982,11 +982,10 @@
 					<div class="widget">
 						<h3 class="line-top">Connect with us</h3>
 						<ul class="social list-unstyled mb-5">
-							<li><a href="#"><span class="icon-facebook"></span></a></li>
-							<li><a href="#"><span class="icon-twitter"></span></a></li>
-							<li><a href="#"><span class="icon-instagram"></span></a></li>
-							<li><a href="#"><span class="icon-dribbble"></span></a></li>
-							<li><a href="#"><span class="icon-linkedin"></span></a></li>
+							<li><a href="https://www.facebook.com/NusaDinamikaSolusindo" target="_blank"><span class="icon-facebook"></span></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=6281323322008" target="_blank"><span class="icon-whatsapp"></span></a></li>
+							<li><a href="https://www.instagram.com/ndsengineering/" target="_blank"><span class="icon-instagram"></span></a></li>
+							<li><a href="https://www.linkedin.com/company/nusa-dinamika-solusindo" target="_blank"><span class="icon-linkedin"></span></a></li>
 						</ul>
 					</div>
 				</div>
@@ -1001,10 +1000,9 @@
 							<div class="widget">
 								<ul class="links list-unstyled">
 									<li><a href="#">Home</a></li>
-									<li><a href="#">Services</a></li>
-									<li><a href="#">Work</a></li>
-									<li><a href="#">Process</a></li>
 									<li><a href="#">About Us</a></li>
+									<li><a href="#">Galery And Project</a></li>
+									<li><a href="#">Contact Us</a></li>
 								</ul>
 							</div>
 						</div>
